backend/k8s/maintenance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintenance-service
  labels:
    app: maintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maintenance
  template:
    metadata:
      labels:
        app: maintenance
    spec:
      containers:
      - name: maintenance
        image: 794934876006.dkr.ecr.ap-east-2.amazonaws.com/cloud-native-maintenance:latest
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: maintenance-service
spec:
  selector:
    app: maintenance
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
