backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-native-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: angrysquirrel.qzz.io
      http:
        paths:
          # --------------------------------------------------
          # 1. User Service 路由
          # --------------------------------------------------
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001

          # --------------------------------------------------
          # 2. Asset Service 路由
          # --------------------------------------------------
          - path: /api/asset
            pathType: Prefix
            backend:
              service:
                name: asset-service
                port:
                  number: 8000

          # --------------------------------------------------
          # 3. Maintenance Service 路由
          # --------------------------------------------------
          - path: /api/maintenance
            pathType: Prefix
            backend:
              service:
                name: maintenance-service
                port:
                  number: 8002
